@@ -647,7 +647,6 @@ class _FlightPath extends stdClass
     // Set the $bool_mark_repeats_exclude variable based on the course_repeat_policy.
     $bool_mark_repeats_exclude = ($course_repeat_policy == "most_recent_exclude_previous");
 
-
     $group_id = $group->group_id;
     // If the group_id == 0, we may be talking about the bare degree plan.
 
@@ -814,7 +813,7 @@ class _FlightPath extends stdClass
 
       
       // Has the student taken this course requirement?
-      if ($c = $student->list_courses_taken->find_best_match($course_requirement, $course_requirement->min_grade, $bool_mark_repeats_exclude))
+      if ($c = $student->list_courses_taken->find_best_match($course_requirement, $course_requirement->min_grade, $bool_mark_repeats_exclude, $req_by_degree_id))
       { 
 
         $h_get_hours = $c->get_hours();
@@ -824,10 +823,7 @@ class _FlightPath extends stdClass
           $h_get_hours = $c->get_hours_awarded($req_by_degree_id);
         }       
 
- 
-
-
-                        
+                         
         // Can we assign any more hours to this group?  Are we
         // out of hours, and should stop?
         if ($hours_assigned >= $hours_required || $hours_assigned >= $meet_min_hours)
